# Graphics-Experiment-1

./: CMakeLists.txt  Camera.h  README.md  Shader.cpp  Shader.h  main.cpp
glad/include/KHR/: khrplatform.h
glad/include/glad/: gl.h  glad.h
glad/src/: glad.c
